--- a/exercises/75 - CORS and Recipes/package.json
+++ b/exercises/75 - CORS and Recipes/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dogrecipes",
   "version": "1.0.0",
-  "description": "",
   "main": "scripts.js",
   "scripts": {
     "start": "parcel index.html"
@@ -9,9 +8,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "0": "0.0.0",
+    "10": "0.0.1",
+    "node-forge": "^0.10.0",
     "parcel-bundler": "^1.12.4"
   },
   "browserslist": [
     "last 1 chrome versions"
-  ]
+  ],
+  "devDependencies": {},
+  "description": ""
 }
